--- a/netease-cloud-music/debian/control
+++ b/netease-cloud-music/debian/control
@@ -4,21 +4,24 @@ Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
                libfontconfig1-dev,
-               libpackagekitqt5-dev,
                libqt5webkit5-dev,
                libqt5x11extras5-dev,
                libx11-dev,
                libxext-dev,
                libxtst-dev,
                nodejs,
+               pkgconf,
                qtmultimedia5-dev,
-               zlib1g-dev,pkgconf
+               zlib1g-dev,
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
 Package: netease-cloud-music
 Architecture: any
 Depends: ${shlibs:Depends},
-         ${misc:Depends},libqt5sql5-sqlite,libqt5multimediawidgets5,libqt5multimedia5-plugins,
+         ${misc:Depends},
+         libqt5sql5-sqlite,
+         libqt5multimedia5-plugins,
+         libqt5multimediawidgets5,
 Description: netease cloud music player.
  netease cloud music player.
