cloud-music: replace `pkgconf` with `pkg-config`
Change-Id: I1066120fbe34eb427d41b8dbf55a915944e33f9b

--- a/netease-cloud-music/debian/control
+++ b/netease-cloud-music/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper (>= 9),
                libxext-dev,
                libxtst-dev,
                nodejs,
-               pkgconf,
+               pkg-config,
                qtmultimedia5-dev,
                zlib1g-dev,
 Standards-Version: 3.9.6
