--- a/deepin-tool-kit/debian/control
+++ b/deepin-tool-kit/debian/control
@@ -5,6 +5,23 @@ Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),qt5-default,
 Standards-Version: 3.9.6
 
+Package: libdtkbase
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}
+Multi-Arch: same
+Description: Deepin Tool Kit Base library
+ DtkBase is base library of Deepin Qt/C++ applications.
+ .
+ This package contains the shared libraries.
+
+Package: libdtkbase-dev
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libdtkutil( =${binary:Version}),
+Description: Deepin Tool Kit Base Devel library
+ DtkBase is base devel library of Deepin Qt/C++ applications.
+ .
+ This package contains the header files and static libraries of DtkBase
+
 Package: libdtkutil
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
