--- a/go-dlib/debian/control
+++ b/go-dlib/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9), dh-golang, golang-go,
  golang-github-burntsushi-xgb-dev, golang-github-howeyc-fsnotify-dev,
  golang-gocheck-dev, golang-github-smartystreets-goconvey-dev,
  golang-gir-gobject-2.0-dev, golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev,
- libpulse-dev, libgtk-3-dev, libcanberra-dev, 
+ libpulse-dev, libgtk-3-dev, libcanberra-dev, golang-kingpin.v2-dev,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
