--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -15,7 +15,7 @@ Build-Depends: debhelper (>= 9),
  qtmultimedia5-dev,
  libqt5svg5-dev,
  qttools5-dev-tools,
- libgtk2.0-dev
+ libgtk2.0-dev,libdui-dev
 Standards-Version: 3.9.5
 Homepage: http://gitcafe.com/Deepin/dde-control-center.git
 
