--- a/netease-cloud-music/debian/control
+++ b/netease-cloud-music/debian/control
@@ -3,9 +3,11 @@ Section: sound
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
+               libcue-dev,
                libfontconfig1-dev,
                libqt5webkit5-dev,
                libqt5x11extras5-dev,
+               libtag1-dev,
                libx11-dev,
                libxext-dev,
                libxtst-dev,
@@ -20,8 +22,10 @@ Package: netease-cloud-music
 Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
+         libcue1,
          libqt5sql5-sqlite,
          libqt5multimedia5-plugins,
          libqt5multimediawidgets5,
+         libtag1v5,
 Description: netease cloud music player.
  netease cloud music player.
