netease-cloud-music add depends libfontconfig1-dev
Change-Id: Ia33fd154466d37aee34dc249ead48a044066c57b

--- a/netease-cloud-music/debian/control
+++ b/netease-cloud-music/debian/control
@@ -14,7 +14,7 @@ Build-Depends: debhelper (>= 9),
                nodejs,
                pkg-config,
                qtmultimedia5-dev,
-               zlib1g-dev,
+               zlib1g-dev,libfontconfig1-dev
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
