--- a/netease-cloud-music/debian/control
+++ b/netease-cloud-music/debian/control
@@ -23,6 +23,7 @@ Architecture: any
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libcue1,
+         libqt5libqgtk2,
          libqt5sql5-sqlite,
          libqt5multimedia5-plugins,
          libqt5multimediawidgets5,
