add dde-dock dbg
Change-Id: Ie91094105f23ae31f4f93eca0b885522129ce1c0

--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -26,3 +26,9 @@ Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: deepin desktop-environment - dock module development files
  Deepin desktop environment 2015 - dock module development files. 
+
+Package: dde-dock-dbg
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, dde-dock(= ${binary:Version})
+Description: deepin desktop-environment - dock module dbg files
+ Deepin desktop environment 2015 - dock module dbg files. 
