--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -15,7 +15,7 @@ Build-Depends: debhelper (>= 9), golang-go,
  golang-github-disintegration-imaging-dev,
  golang-gocheck-dev,
  libudev-dev,
-# libbamf-dev,
+ libbamf-dev,
  libbamf3-dev,
  libglib2.0-dev,
  libgtk-3-dev,
