add dde-control-center libdui
Change-Id: I8e097e2a1d39e4ead2183a0e05810c45718d7bbd

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -18,7 +18,7 @@ Build-Depends: debhelper (>= 9),
  libgtk2.0-dev,
  libdtkbase-dev,
  libdtkutil-dev,
- libdtkwidget-dev,
+ libdtkwidget-dev,libdui-dev,
 Standards-Version: 3.9.5
 Homepage: http://gitcafe.com/Deepin/dde-control-center.git
 
