add dde-control-center dbg
Change-Id: I38f27cf9a541a5fbc52560d57a76a6e12405b6b3

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -39,3 +39,9 @@ Depends: ${shlibs:Depends},
  netselect,
 Description: New control center for linux deepin
  New control center for linux deepin
+
+Package: dde-control-center-dbg
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, dde-control-center-dbg(= ${binary:Version})
+Description: New control center for linux deepin dbg
+ New control center for linux deepin dbg
