--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -62,3 +62,8 @@ Description: daemon handling the DDE session settings
  This package contains the daemon which is responsible for setting the
  various parameters of a DDE session and the applications that run
  under it. 
+
+Package: dde-daemon-dbg
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, dde-daemon(= ${binary:Version})
+Description: daemon handling the DDE session settings dbg.
