dde-session-ui add dbg
Change-Id: I1c9f16ecbdaa21de0fb8e9c4cd194691fb1b716d

--- a/dde-session-ui/debian/control
+++ b/dde-session-ui/debian/control
@@ -17,3 +17,8 @@ Conflicts: dde-workspace, startdde (<< 2.91.1)
 Breaks: dde-workspace, startdde(<< 2.91.1)
 Description: deepin desktop-environment - dde-session-ui module
  Deepin desktop environment 2015 - dde-session-ui module.
+
+Package: dde-session-ui-dbg
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, dde-session-ui(= ${binary:Version})
+Description: deepin desktop-environment - dde-session-ui dbg module
