--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -2,13 +2,13 @@ Source: dde-dock
 Section: deepin
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
-Build-Depends: debhelper (>= 8.0.0), pkg-config, 
+Build-Depends: debhelper (>= 8.0.0), pkg-config,
  qt5-qmake, qt5-default,
  libgtk2.0-dev,
  libxcb-image0-dev, libxcb-composite0-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
  libxcb-damage0-dev, libqt5svg5-dev,
- libdui-dev(>=1.2.1), qttools5-dev-tools
+ libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev, qttools5-dev-tools
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
 
@@ -25,10 +25,10 @@ Package: dde-dock-dev
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: deepin desktop-environment - dock module development files
- Deepin desktop environment 2015 - dock module development files. 
+ Deepin desktop environment 2015 - dock module development files.
 
 Package: dde-dock-dbg
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, dde-dock(= ${binary:Version})
 Description: deepin desktop-environment - dock module dbg files
- Deepin desktop environment 2015 - dock module dbg files. 
+ Deepin desktop environment 2015 - dock module dbg files.
