--- a/netease-cloud-music/debian/control
+++ b/netease-cloud-music/debian/control
@@ -3,18 +3,20 @@ Section: sound
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
-               libcue-dev,
-               libfontconfig1-dev,
-               libqt5webkit5-dev,
-               libqt5x11extras5-dev,
-               libtag1-dev,
-               libx11-dev,
-               libxext-dev,
-               libxtst-dev,
-               nodejs,
-               pkg-config,
-               qtmultimedia5-dev,
-               zlib1g-dev,libfontconfig1-dev
+    libcue-dev,
+    libfontconfig1-dev,
+    libqt5webkit5-dev,
+    libqt5x11extras5-dev,
+    libtag1-dev,
+    libx11-dev,
+    libxext-dev,
+    libxtst-dev,
+    nodejs,
+    pkg-config,
+    qtmultimedia5-dev,
+    zlib1g-dev,
+    libharfbuzz-dev,
+    libfontconfig1-dev
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
