--- a/dde-desktop/debian/control
+++ b/dde-desktop/debian/control
@@ -2,11 +2,11 @@ Source: dde-desktop
 Section: testing/deepin
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
-Build-Depends: debhelper (>= 8.0.0), pkg-config, 
+Build-Depends: debhelper (>= 8.0.0), pkg-config,
  qt5-qmake, qt5-default, qtbase5-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
  libgsettings-qt-dev, libqt5svg5-dev,
- libgtk2.0-dev, libdui-dev(>=1.2.1),
+ libgtk2.0-dev, liddtkbase-dev, liddtkutil-dev, libdtkwidget-dev,
  qttools5-dev-tools, qtbase5-private-dev
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
