--- a/dde-session-ui/debian/control
+++ b/dde-session-ui/debian/control
@@ -4,9 +4,10 @@ Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config,
  qt5-qmake, qt5-default, qtbase5-dev, liblightdm-qt5-3-dev,
- libxcb-ewmh-dev, libqt5x11extras5-dev, libdui-dev (>= 1.2.2),
- libgsettings-qt-dev, libqt5svg5-dev,liblightdm-qt5-3-dev,
- libglib2.0-dev, libgtk2.0-dev, qttools5-dev-tools
+ libxcb-ewmh-dev, libqt5x11extras5-dev, libgsettings-qt-dev,
+ libqt5svg5-dev,liblightdm-qt5-3-dev, libglib2.0-dev,
+ libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev,
+ libgtk2.0-dev, qttools5-dev-tools,
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
 
