Add compile condition to dde-session-ui
To make dde-shutdow no quiting

Change-Id: Id30a37181fb089886613d95c88d9f5d485757171

--- a/dde-session-ui/debian/rules
+++ b/dde-session-ui/debian/rules
@@ -4,8 +4,16 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+include /usr/share/dpkg/default.mk
+ARCH := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
+
 %:
 	dh $@ --parallel
+
+ifeq($(ARCH), alpha)
+override_dh_auto_configure:
+	dh_auto_configure -- SHUTDOWN_NO_QUIT=YES
+endif
 
 override_dh_strip:
 	dh_strip --dbg-package=dde-session-ui-dbg
