--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
  pkg-config,
+ dpkg-dev,
  libx11-dev,
  qt5-qmake,
  qt5-default,
