--- a/dde-session-ui/debian/control
+++ b/dde-session-ui/debian/control
@@ -2,7 +2,7 @@ Source: dde-session-ui
 Section: dde
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
-Build-Depends: debhelper (>= 8.0.0), pkg-config,
+Build-Depends: debhelper (>= 8.0.0), pkg-config, dpkg-dev,
  qt5-qmake, qt5-default, qtbase5-dev, liblightdm-qt5-3-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev, libgsettings-qt-dev,
  libqt5svg5-dev,liblightdm-qt5-3-dev, libglib2.0-dev,
