--- a/dde-session-ui/debian/rules
+++ b/dde-session-ui/debian/rules
@@ -5,12 +5,11 @@
 #export DH_VERBOSE=1
 
 include /usr/share/dpkg/default.mk
-ARCH := $(shell dpkg-architecture -qDEB_BUILD_ARCH)
 
 %:
 	dh $@ --parallel
 
-ifeq ($(ARCH), alpha)
+ifeq($(DEB_BUILD_ARCH), alpha)
 override_dh_auto_configure:
 	dh_auto_configure -- SHUTDOWN_NO_QUIT=YES
 endif
