--- a/deepin-movie/debian/control
+++ b/deepin-movie/debian/control
@@ -24,6 +24,7 @@ Depends: ${shlibs:Depends},
  deepin-qml-widgets,
  dleyna-renderer,
  dde-qml-dbus-factory,
+ python-opengl
 Recommends: deepin-manual,
 Description: deepin movie for linuxdeepin desktop environment
  Deepin movie with linuxdeepin desktop environment.
