--- a/deepin-screenshot/debian/control
+++ b/deepin-screenshot/debian/control
@@ -23,5 +23,6 @@ Depends: ${misc:Depends},
  deepin-social-sharing,
  deepin-menu,
  deepin-qml-widgets,
+ python-opengl
 Recommends: deepin-manual
 Description: Advanced screen shoting tool
