--- a/dde-session-ui/debian/rules
+++ b/dde-session-ui/debian/rules
@@ -11,7 +11,7 @@ include /usr/share/dpkg/default.mk
 
 ifeq ($(DEB_BUILD_ARCH), mipsel)
 override_dh_auto_configure:
-	dh_auto_configure -- SHUTDOWN_NO_QUIT=YES
+	dh_auto_configure -- SHUTDOWN_NO_QUIT=YES LOCK_NO_QUIT=YES
 endif
 
 override_dh_strip:
