--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9), golang-go,
  dde-go-dbus-factory(>= 0.6.1),
- golang-dlib-dev(>= 0.4.0), golang-gir-gobject-2.0-dev, 
+ golang-dlib-dev(>= 0.4.0), golang-gir-gobject-2.0-dev,
  golang-gir-gio-2.0-dev, golang-gir-glib-2.0-dev,
  golang-github-burntsushi-xgb-dev,
  golang-github-burntsushi-xgbutil-dev,
@@ -44,6 +44,7 @@ Depends: ${shlibs:Depends},
  xcur2png,
  iso-codes,
  gvfs-bin,
+ gnome-keyring,
  deepin-sound-theme,
  policykit-1-gnome,
  deepin-metacity,
@@ -61,7 +62,7 @@ Suggests: grub-themes-deepin
 Description: daemon handling the DDE session settings
  This package contains the daemon which is responsible for setting the
  various parameters of a DDE session and the applications that run
- under it. 
+ under it.
 
 Package: dde-daemon-dbg
 Architecture: any
