--- a/deepin-remote-assistance/debian/control
+++ b/deepin-remote-assistance/debian/control
@@ -5,7 +5,7 @@ Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Standards-Version: 3.9.4
 Build-Depends: debhelper (>= 9),
                dh-python,
-               python3-all,qt5-qmake, qt5-default, qtbase5-dev
+               python3-all, qt5-qmake, qt5-default, qtbase5-dev, libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev
 Homepage: http://www.linuxdeepin.com/
 
 Package: deepin-remote-assistance
