dde-daemon: Add libpam-gnome-keyring as depends
Change-Id: I965acfafa492af33af59976b7c494df2b59b3217

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -45,6 +45,7 @@ Depends: ${shlibs:Depends},
  iso-codes,
  gvfs-bin,
  gnome-keyring,
+ libpam-gnome-keyring,
  deepin-sound-theme,
  policykit-1-gnome,
  deepin-metacity,
