--- a/deepin-license/debian/control
+++ b/deepin-license/debian/control
@@ -1,12 +1,17 @@
-Source: deepin-license
-Section: utils
-Priority: optional
-Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
-Build-Depends: debhelper (>=9),dkms
-Standards-Version: 3.9.6
 Homepage: https://www.deepin.com
+Source: deepin-license
+Section: graphics
+Priority: optional
+Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Uploaders: Iceyer  Tsubasa <me@iceyer.net>
+Build-Depends: debhelper (>= 9.0~), dh-systemd, qt5-default, qttools5-dev-tools, libqt5x11extras5-dev, libssl-dev,
+               libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev, dkms, linux-headers-4.2.0-1-all
+Standards-Version: 3.9.6
 
-Package: deepin-license
+Package: deepin-license-activator
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: deepin license
+Depends: deepin-license-dkms,
+         ${misc:Depends},
+         ${shlibs:Depends}
+Provides: deepin-license
+Description: Deepin License Activator
