--- a/deepin-license/debian/rules
+++ b/deepin-license/debian/rules
@@ -1,8 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@ 
+	dh $@ --parallel --with=systemd
 
-#override_dh_auto_configure:
-#	dh_auto_configure -- #	-DCMAKE_LIBRARY_PATH=$(DEB_HOST_MULTIARCH)
+#EOF
 
