--- a/deepin-license/debian/control
+++ b/deepin-license/debian/control
@@ -8,10 +8,15 @@ Build-Depends: debhelper (>= 9.0~), dh-systemd, qt5-default, pkg-config, qttools
  libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev, dkms, linux-headers-4.2.0-1-all
 Standards-Version: 3.9.6
 
+Package: deepin-license-dkms
+Architecture: all
+Depends: dkms
+Description: Source code for Deepin License Activator Driver.
+
 Package: deepin-license-activator
 Architecture: any
 Depends: deepin-license-dkms,
          ${misc:Depends},
          ${shlibs:Depends}
 Provides: deepin-license
-Description: Deepin License Activator
+Description: Deepin License Activator.
