deepin-license: get dkms sourece version from file.
Change-Id: I48fc1a9afb8b2eae08e5ae3f91ed6a9d583aa4d1

--- a/deepin-license/debian/rules
+++ b/deepin-license/debian/rules
@@ -1,6 +1,7 @@
 #!/usr/bin/make -f
 
 export BUILD_ARCH=$(shell dpkg-architecture -qDEB_BUILD_ARCH)
+export VERSION=$(shell dpkg-parsechangelog | sed -nr '/^Version:/s/Version: (.*:)?(.*)-(.*)/\2/p')
 
 %:
 	dh $@ --parallel --with=systemd
