remove json support add git url detect support
Change-Id: I4bef0cbe844890e8c328daf0851c39b715ee8c3e

--- a/builder.conf
+++ b/builder.conf
@@ -1,12 +1,12 @@
 [build]
 upstreamer_basedir = /home/leaeasy/debian-develop/
-debian_basedir = /home/leaeasy/deepin.dsc/
+debian_basedir = /home/leaeasy/deepin.dsc
 dist = experimental
 default_arch = amd64
 default_branch = develop
 notify = 0
 tag_version = 1
-json_config = branchs.json
+job_config = git-build.conf
 
 [hipchat]
 token = 8d4dfb5c6fe33794777101c023d8a4
@@ -20,22 +20,3 @@ base_dir = /srv/package-source/source
 dest = /srv/package-source/source/experimental
 method=cp
 dest = experimental
-
-[deepin-compiz]
-packagename = deepin-music
-upstreamer_branch = master
-
-[deepin-store]
-upstreamer_branch = develop
-
-[deepin-gtk-theme]
-upstreamer_branch = master
-
-[qtav]
-upstreamer_branch = master
-
-[deepin-desktop-environment]
-depends_on = [ 'go-dlib' 'dde-api' ]
-
-[dde-api]
-depends_on = [ 'go-dlib' ]
