add git build config  file
Change-Id: Idcb18c9989ec0a38d31970d11dbd703359346d83

--- a/git-build.conf
+++ b/git-build.conf
@@ -5,6 +5,12 @@ default_branch = master
 package_host = dde
 private=False
 
+[archive]
+git_repo=/home/leaeasy/git-repo
+source_repo=/srv/src/{dist}/{source}
+debian_repo=/home/leaeasy/git-repo/pkg_debian
+dsc_repo=/srv/package-source/source/unstable
+
 [deepin-boot-maker]
 package_host=deepin-boot-maker
 git=ssh://jenkins@cr.deepin.io:29418/deepin-boot-maker
@@ -209,6 +215,7 @@ git=https://cr.deepin.io/dde/dde-calendar
 git=https://cr.deepin.io/deepin-image-viewer
 
 [deepin-license]
+package_host=deepin-license
 git=https://cr.deepin.io/deepin-license
 
 [dde-session-ui]
