--- a/builder.conf
+++ b/builder.conf
@@ -6,7 +6,7 @@ default_arch = amd64
 default_branch = develop
 notify = 0
 tag_version = 1
-job_config = git-build.conf
+job_config = /home/leaeasy/deepin.dsc.bak/git-build.conf
 
 [hipchat]
 token = 8d4dfb5c6fe33794777101c023d8a4
