--- a/deepin-image-viewer/debian/control
+++ b/deepin-image-viewer/debian/control
@@ -2,7 +2,7 @@ Source: deepin-image-viewer
 Section: utils
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
-Build-Depends: debhelper (>=9), qt5-qmake, qt5-default, qtbase5-dev, pkg-config, libqt5gui5, libdtkutil-dev, libdtkwidget-dev, libdtkbase-dev, libexif-dev,
+Build-Depends: debhelper (>=9), qt5-qmake, qt5-default, qtbase5-dev, pkg-config, libqt5gui5, libdtkutil-dev, libdtkwidget-dev, libdtkbase-dev, libexif-dev, libqt5svg5-dev,
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
