change deepin-file-manager to deepin-file-manager-backend
Change-Id: I98006170c8967515ec7bf6c2010baff6e16b1956

--- a/archive.conf
+++ b/archive.conf
@@ -148,8 +148,8 @@ git=https://cr.deepin.io/lastore/deepin-appstore
 [deepin-metacity]
 git=https://cr.deepin.io/deepin-metacity
 
-[deepin-file-manager]
-git=https://cr.deepin.io/deepin-file-manager
+[deepin-file-manager-backend]
+git=https://cr.deepin.io/deepin-file-manager-backend
 
 [deepin-wm-switcher]
 git=https://cr.deepin.io/deepin-wm-switcher
