--- a/git-build.conf
+++ b/git-build.conf
@@ -44,9 +44,9 @@ package_host = dde
 git=ssh://jenkins@cr.deepin.io:29418/deepin-crossover
 branch=develop
 
-[deepin-file-manager]
+[deepin-file-manager-backend]
 package_host=dde
-git=ssh://jenkins@cr.deepin.io:29418/deepin-file-manager
+git=ssh://jenkins@cr.deepin.io:29418/deepin-file-manager-backend
 branch=master
 
 [deepin-gettext-tools]
@@ -97,7 +97,7 @@ version=2.90.5
 package_host=dde
 git=https://cr.deepin.io/dde/dde-api
 version=3.0.1
-trigger=deepin-file-manager, dde-daemon
+trigger=deepin-file-manager-backend, dde-daemon
 
 [dde-daemon]
 package_host=dde
