Fix deepin-file-manager-backend source name.
Change-Id: I44053b90b0859d0a9946ccf1531c7c0721097604

--- a/deepin-file-manager-backend/debian/control
+++ b/deepin-file-manager-backend/debian/control
@@ -1,4 +1,4 @@
-Source: deepin-file-manager
+Source: deepin-file-manager-backend
 Section: devel
 Priority: extra
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
