--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -28,7 +28,7 @@ Build-Depends: debhelper (>= 9), golang-go,
  libxcursor-dev,
  libfontconfig1-dev,
  libcanberra-dev,
- dde-api-dev (>=2.92.2),
+ dde-api-dev (>=2.92.2),deepin-desktop-schemas,
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
