--- a/deepin-wm/debian/control
+++ b/deepin-wm/debian/control
@@ -3,20 +3,18 @@ Section: x11
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
-               dh-autoreconf,
-               gnome-common,
-               gsettings-desktop-schemas-dev,
-               libbamf3-dev,
-               libcanberra-dev,
-               libcanberra-gtk3-dev,
-               libclutter-1.0-dev (>= 1.9.16),
-               libclutter-gtk-1.0-dev,
-               libgee-0.8-dev,
-               libglib2.0-dev (>= 2.32),
-               libgnome-desktop-3-dev,
-               libgtk-3-dev (>= 3.4.0),
-               libdeepin-mutter-dev (>= 3.8.4),
-               valac (>= 0.22.0)
+ dh-autoreconf, gnome-common,
+ gsettings-desktop-schemas-dev,
+ libbamf3-dev, libcanberra-dev,
+ libcanberra-gtk3-dev,
+ libclutter-1.0-dev (>= 1.9.16),
+ libclutter-gtk-1.0-dev,
+ libgee-0.8-dev, libwnck-dev,
+ libglib2.0-dev (>= 2.32),
+ libgnome-desktop-3-dev,
+ libgtk-3-dev (>= 3.4.0),
+ libdeepin-mutter-dev (>= 3.8.4),
+ valac (>= 0.22.0)
 Standards-Version: 3.9.5
 Homepage: https://gitcafe.com/Deepin/deepin-wm
 
