--- a/deepin-notifications/debian/control
+++ b/deepin-notifications/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: extra
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Build-Depends: debhelper (>= 9),
-               qt5-default, qtdeclarative5-dev
+               qt5-default, qtdeclarative5-dev, libdtkbase-dev, libdtkwidget-dev
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
 
