--- a/deepin-wm/debian/control
+++ b/deepin-wm/debian/control
@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 9),
  libcanberra-gtk3-dev,
  libclutter-1.0-dev (>= 1.9.16),
  libclutter-gtk-1.0-dev,
- libgee-0.8-dev, libwnck-dev,
+ libgee-0.8-dev, libwnck-3-dev,
  libglib2.0-dev (>= 2.32),
  libgnome-desktop-3-dev,
  libgtk-3-dev (>= 3.4.0),
