deepin-wm-switcher: add lost descriptions
Change-Id: Id0e1a1fbbfac1c2bfc8afe2bdfd4dca162ffdc15

--- a/deepin-wm-switcher/debian/control
+++ b/deepin-wm-switcher/debian/control
@@ -9,5 +9,5 @@ Homepage: http://www.linuxdeepin.com
 Package: deepin-wm-switcher
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
+Description: deepin window manager monitoring and auto-switching service
  deepin window manager monitoring and auto-switching service.
