deepin-desktop-base: make deepin csv symbol links.
Change-Id: Ic837c19e6809aa85b44df708ac7fd40ab18ec7c9

--- a/deepin-desktop-base/debian/control
+++ b/deepin-desktop-base/debian/control
@@ -7,6 +7,6 @@ Build-Depends: debhelper (>= 9)
 
 Package: deepin-desktop-base
 Architecture: all
-Depends: ${misc:Depends}, deepin-keyring,
+Depends: ${misc:Depends}, deepin-keyring, distro-info-data,
  eject, plymouth-theme-deepin-logo, friendly-recovery
 Description: Base files for Deepin Desktop
