--- a/deepin-tool-kit/debian/control
+++ b/deepin-tool-kit/debian/control
@@ -2,7 +2,9 @@ Source: deepin-tool-kit
 Section: devel
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
-Build-Depends: debhelper (>= 9) ,qt5-default ,qtdeclarative5-dev ,qtmultimedia5-dev ,libqt5x11extras5-dev ,libxext-dev, x11proto-xext-dev, libxcb-util0-dev, libstartup-notification0-dev
+Build-Depends: debhelper (>= 9), qt5-default, pkg-config, 
+ qtdeclarative5-dev, qtmultimedia5-dev, libqt5x11extras5-dev, 
+ libxext-dev, x11proto-xext-dev, libxcb-util0-dev, libstartup-notification0-dev
 Standards-Version: 3.9.6
 
 Package: libdtkbase
@@ -16,7 +18,7 @@ Description: Deepin Tool Kit Base library
 
 Package: libdtkbase-dev
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libdtkutil( =${binary:Version}),
+Depends: ${shlibs:Depends}, ${misc:Depends}, libdtkutil( =${binary:Version})
 Description: Deepin Tool Kit Base Devel library
  DtkBase is base devel library of Deepin Qt/C++ applications.
  .
@@ -33,7 +35,7 @@ Description: Deepin Tool Kit Util library
 
 Package: libdtkutil-dev
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libdtkutil( =${binary:Version}),
+Depends: ${shlibs:Depends}, ${misc:Depends}, libdtkutil( =${binary:Version})
 Description: Deepin Tool Kit Util library
  DtkUtil is standard utils library of Deepin Qt/C++ applications.
  .
@@ -50,7 +52,7 @@ Description: Deepin graphical user interface library
 
 Package: libdtkwidget-dev
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libdtkwidget( =${binary:Version}), qtdeclarative5-dev,
+Depends: ${shlibs:Depends}, ${misc:Depends}, libdtkwidget( =${binary:Version}), qtdeclarative5-dev, 
  qtmultimedia5-dev, libqt5x11extras5-dev
 Description: Deepin graphical user interface library
  DtkWidget is Deepin graphical user interface for deepin desktop development.
