--- a/deepin-desktop-schemas/debian/control
+++ b/deepin-desktop-schemas/debian/control
@@ -8,7 +8,7 @@ Homepage: http://www.deepin.org/
 
 Package: deepin-desktop-schemas
 Section: misc
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends},
          ${shlibs:Depends}
 Conflicts: deepin-default-gsettings
