--- a/deepin-desktop-schemas/debian/rules
+++ b/deepin-desktop-schemas/debian/rules
@@ -1,4 +1,17 @@
 #!/usr/bin/make -f
+include /usr/share/dpkg/default.mk
+
+performance=slowly
+ifeq ($(DEB_BUILD_ARCH), amd64)
+	performance=normal
+endif
+ifeq ($(DEB_BUILD_ARCH), i386)
+	performance=normal
+endif
+export performance
 
 %: 
 	dh $@
+
+override_dh_auto_build:
+	dh_auto_build -- performance=$(performance)
