--- a/deepin-notifications/debian/control
+++ b/deepin-notifications/debian/control
@@ -2,7 +2,7 @@ Source: deepin-notifications
 Section: misc
 Priority: extra
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
-Build-Depends: debhelper (>= 9), pkg-config,
+Build-Depends: debhelper (>= 9), pkg-config, libgtk2.0-dev,
  qt5-default, qtdeclarative5-dev, libdtkbase-dev, libdtkwidget-dev, 
 Standards-Version: 3.9.5
 Homepage: http://www.linuxdeepin.com
