--- a/git-build.conf
+++ b/git-build.conf
@@ -207,6 +207,7 @@ package_host=deepin-cloud-print
 
 [dde-file-manager]
 git=https://cr.deepin.io/dde/dde-file-manager
+package_host=dde-file-manager
 
 [dde-calendar]
 git=https://cr.deepin.io/dde/dde-calendar
