dde-control-center: remove remote-assistance from mipsel depends
Change-Id: Iaa85503d3f5e4ded7e17430937fed714659a9363

--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -36,7 +36,7 @@ Depends: ${shlibs:Depends},
  libqt5multimedia5-plugins,
  gstreamer1.0-plugins-bad,
  xkb-data,
- deepin-remote-assistance,
+ deepin-remote-assistance [!mipsel],
  tzdata-l10n,
  netselect,
 Description: New control center for linux deepin
