--- a/dde-api/debian/control
+++ b/dde-api/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 9),
  golang-github-burntsushi-xgb-dev,
  golang-github-burntsushi-xgbutil-dev,
  golang-gopkg-alecthomas-kingpin.v2-dev,
+ golang-github-disintegration-imaging-dev,
  dde-go-dbus-factory(>>2.92.1),
  libxi-dev,
  libcanberra-dev,
