dde-session-ui: add provides lightdm-greeter
Change-Id: Idef1e42f620d840f76143ba2d76c3c011135654e

--- a/dde-session-ui/debian/control
+++ b/dde-session-ui/debian/control
@@ -14,6 +14,7 @@ Homepage: http://www.deepin.org/
 Package: dde-session-ui
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, deepin-desktop-schemas (>= 2.91.2)
+Provides: lightdm-greeter
 Conflicts: dde-workspace, startdde (<< 2.91.1)
 Breaks: dde-workspace, startdde(<< 2.91.1)
 Description: deepin desktop-environment - dde-session-ui module
