--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -50,7 +50,7 @@ Depends: ${shlibs:Depends},
  deepin-desktop-schemas (>= 2.91.2),
 Breaks: dde-daemon(<< 2.92.2), dde-workspace
 Conflicts: dde-workspace
-Recommends: network-manager-pptp,
+Suggests: network-manager-pptp,
  network-manager-l2tp,
  network-manager-openconnect,
  network-manager-openvpn,
