dde-daemon: fix suggests
Change-Id: Iedfbaad2e55de11af3846ec72027518bfa630551

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -57,7 +57,7 @@ Suggests: network-manager-pptp,
  network-manager-vpnc,
  xserver-xorg-input-wacom,
  mobile-broadband-provider-info,
-Suggests: grub-themes-deepin
+ grub-themes-deepin
 Description: daemon handling the DDE session settings
  This package contains the daemon which is responsible for setting the
  various parameters of a DDE session and the applications that run
