deepin-desktop-schemas: add ARCH support
Change-Id: I8f5aa7e00577210b87e88d00356d6201d52289b9

--- a/deepin-desktop-schemas/debian/rules
+++ b/deepin-desktop-schemas/debian/rules
@@ -1,17 +1,17 @@
 #!/usr/bin/make -f
 include /usr/share/dpkg/default.mk
 
-performance=slowly
+ARCH = common
 ifeq ($(DEB_BUILD_ARCH), amd64)
-	performance=normal
+	ARCH = x86
 endif
 ifeq ($(DEB_BUILD_ARCH), i386)
-	performance=normal
+	ARCH = x86
 endif
-export performance
+export ARCH
 
 %: 
 	dh $@
 
 override_dh_auto_build:
-	dh_auto_build -- performance=$(performance)
+	dh_auto_build -- ARCH=$(ARCH)
