deepin-notifications: add deepin-qml-widgets to depends.
Change-Id: I87c2c894173ac8ee8c5dc6fcb626d6b7c71ddeb7

--- a/deepin-notifications/debian/control
+++ b/deepin-notifications/debian/control
@@ -9,6 +9,6 @@ Homepage: http://www.linuxdeepin.com
 
 Package: deepin-notifications
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, deepin-qml-widgets
 Description: system notifications for linuxdeepin desktop environment
  Deepin notification is a notfiy app for linuxdeepin new desktop environment.
