--- a/dde-desktop/debian/control
+++ b/dde-desktop/debian/control
@@ -14,7 +14,7 @@ Homepage: http://www.deepin.org/
 Package: dde-desktop
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- deepin-file-manager-backend, deepin-menu (>> 2.90.1), deepin-wallpapers
+ deepin-file-manager-backend, deepin-menu (>> 2.90.1)
 Conflicts: dde-workspace (<< 2.90.5)
 Description: deepin desktop-environment - desktop module
  Deepin desktop environment 2015 - desktop module.
