dde-session-ui: fix lightdm sometimes start failed.  * add default lightdm default greeter.  * add dde-daemon to depends.
Change-Id: Ibaba537fe548e4fc85be803cc417a7a83ad16241

--- a/dde-session-ui/debian/rules
+++ b/dde-session-ui/debian/rules
@@ -16,3 +16,6 @@ endif
 
 override_dh_strip:
 	dh_strip --dbg-package=dde-session-ui-dbg
+
+override_dh_insall:
+	dh_install debian/60-lightdm-deepin-greeter.conf usr/share/lightdm/lightdm.conf.d/
