--- a/deepin-movie/debian/control
+++ b/deepin-movie/debian/control
@@ -13,7 +13,6 @@ Depends: ${shlibs:Depends},
  python-sip,
  python-pyqt5,
  mediainfo,
- qt5-extra,
  qml-module-qtav,
  python-ass,
  python-pysrt,
@@ -25,6 +24,6 @@ Depends: ${shlibs:Depends},
  deepin-menu,
  deepin-manual,
  deepin-qml-widgets,
- libfontconfig1-dev
+ libfontconfig1
 Description: deepin movie for linuxdeepin desktop environment
  Deepin movie with linuxdeepin desktop environment.
