deepin-license: Change com.deepin.license.LicenseDaemon to com.deepin.license
Change-Id: Ie26dd86c81c93d738d2141a0bfd70a249e6f62fb

--- a/deepin-license/debian/deepin-license-activator.service
+++ b/deepin-license/debian/deepin-license-activator.service
@@ -3,8 +3,8 @@ Description=service_description
 
 [Service]
 Type=dbus
-BusName=com.deepin.license.LicenseDaemon
-ExecStart=/usr/lib/deepin-daemon/license-daemon
+BusName=com.deepin.license
+ExecStart=/usr/lib/deepin-daemon/license-agent
 
 [Install]
 WantedBy=default.target
