--- a/deepin-license/debian/control
+++ b/deepin-license/debian/control
@@ -5,7 +5,7 @@ Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Uploaders: Iceyer  Tsubasa <me@iceyer.net>
 Build-Depends: debhelper (>= 9.0~), dh-systemd, qt5-default, pkg-config, qttools5-dev-tools, libqt5x11extras5-dev, libssl-dev,
- libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev, dkms, libmount-dev, linux-headers-4.2.0-1-all
+    libboost1.58-dev, libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev, dkms, libmount-dev, linux-headers-4.2.0-1-all
 Standards-Version: 3.9.6
 
 Package: deepin-license-dkms
