deepin-icon-theme: revert deepin-laucher 48 icon size
Change-Id: I3f1bb275e610decf5e368a2d8868fa5b3043b235

--- a/deepin-icon-theme/debian/rules
+++ b/deepin-icon-theme/debian/rules
@@ -3,6 +3,6 @@
 %:
 	dh $@
 
-override_dh_auto_install:
-	dh_auto_install
-	install -Dm644 debian/deepin-launcher.png debian/deepin-icon-theme/usr/share/icons/deepin/places/48/deepin-launcher.png
+#override_dh_auto_install:
+#	dh_auto_install
+#	install -Dm644 debian/deepin-launcher.png debian/deepin-icon-theme/usr/share/icons/deepin/places/48/deepin-launcher.png
