add package_host of deepin-movie
Change-Id: Ia13680f19d0f295834076135b6492d5400b52884

--- a/git-build.conf
+++ b/git-build.conf
@@ -131,6 +131,7 @@ git=https://cr.deepin.io/go-dbus-generator
 
 [deepin-moive]
 git=https://cr.deepin.io/deepin-movie
+package_host=deepin-movie
 
 [dde-dock-applets]
 git=https://cr.deepin.io/old/dde-dock-applets
