--- a/dde-desktop/debian/control
+++ b/dde-desktop/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 8.0.0), pkg-config,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
  libgsettings-qt-dev, libqt5svg5-dev,
  libgtk2.0-dev, libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev,
- qttools5-dev-tools, qtbase5-private-dev, libdui-dev,
+ qttools5-dev-tools, qtbase5-private-dev
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
 
