--- a/git-build.conf
+++ b/git-build.conf
@@ -129,7 +129,7 @@ git=https://cr.deepin.io/deepin-screenshot
 [go-dbus-factory]
 git=https://cr.deepin.io/go-dbus-generator
 
-[deepin-moive]
+[deepin-movie]
 git=https://cr.deepin.io/deepin-movie
 package_host=deepin-movie
 
