modify deepin-remote-assistance all to any
Change-Id: I1774d23bd393eaba2aafd162a07f4b1728fd0f60

--- a/deepin-remote-assistance/debian/control
+++ b/deepin-remote-assistance/debian/control
@@ -10,7 +10,7 @@ Homepage: http://www.linuxdeepin.com/
 
 Package: deepin-remote-assistance
 Section: misc
-Architecture: all
+Architecture: any
 Depends: ${misc:Depends},
          ${python3:Depends},
          dra-chromium,
