dde-daemon: add user-setup to depends
Change-Id: Ibafe1775c9dd03f20e770659144765b5a1748d1e

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -45,6 +45,7 @@ Depends: ${shlibs:Depends},
  gvfs-bin,
  gnome-keyring,
  deepin-sound-theme,
+ user-setup,
  policykit-1-gnome,
  deepin-metacity,
  deepin-desktop-schemas (>= 2.91.2),
