deepin-installer: add xdg-user-dirs and gksu to depends
Change-Id: Iff73a1c4bb8baa54f80993a2664de0a651c6e6fd

--- a/deepin-installer/debian/control
+++ b/deepin-installer/debian/control
@@ -42,6 +42,8 @@ Depends: ${shlibs:Depends}, libdeepin-webkit-3.0-0,
  dmidecode,
  gdisk,
  python,
+ gksu,
+ xdg-user-dirs,
  dde-daemon
 Description: New installer for linuxdeepin
  New installer for Linuxdeepin. 
