--- a/deepin-metacity/debian/control
+++ b/deepin-metacity/debian/control
@@ -4,32 +4,33 @@ Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
 Uploaders: Andreas Henriksson <andreas@fatal.se>, Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Dmitry Shachnev <mitya57@debian.org>
 Build-Depends: cdbs (>= 0.4.41),
-               debhelper (>= 8),
-               dh-autoreconf,
-               gnome-pkg-tools (>= 0.10),
-               gsettings-desktop-schemas-dev (>= 3.3.0),
-               intltool (>= 0.34.90),
-               libcanberra-gtk3-dev,
-               libglib2.0-dev (>= 2.36.0),
-               libgtk-3-dev (>= 3.15.2),
-               libgtop2-dev,
-               libice-dev,
-               libpango1.0-dev (>= 1.2.0),
-               libsm-dev,
-               libstartup-notification0-dev (>= 0.7),
-               gnome-common,
-               libx11-dev,
-               libxcomposite-dev (>= 1:0.2),
-               libxcursor-dev,
-               libxdamage-dev,
-               libxext-dev,
-               libxfixes-dev,
-               libxinerama-dev,
-               libxrandr-dev,
-               libxrender-dev,
-               libxt-dev,
-               yelp-tools,
-               zenity
+ debhelper (>= 8),
+ dh-autoreconf,
+ gnome-pkg-tools (>= 0.10),
+ gsettings-desktop-schemas-dev (>= 3.3.0),
+ intltool (>= 0.34.90),
+ libcanberra-gtk3-dev,
+ libglib2.0-dev (>= 2.36.0),
+ libjson-glib-dev,
+ libgtk-3-dev (>= 3.15.2),
+ libgtop2-dev,
+ libice-dev,
+ libpango1.0-dev (>= 1.2.0),
+ libsm-dev,
+ libstartup-notification0-dev (>= 0.7),
+ gnome-common,
+ libx11-dev,
+ libxcomposite-dev (>= 1:0.2),
+ libxcursor-dev,
+ libxdamage-dev,
+ libxext-dev,
+ libxfixes-dev,
+ libxinerama-dev,
+ libxrandr-dev,
+ libxrender-dev,
+ libxt-dev,
+ yelp-tools,
+ zenity
 Standards-Version: 3.9.6
 Homepage: https://git.gnome.org/browse/metacity
 Vcs-Svn: svn://anonscm.debian.org/pkg-gnome/desktop/unstable/metacity
@@ -38,10 +39,10 @@ Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/metacit
 Package: deepin-metacity
 Architecture: any
 Depends: dde-daemon,
-         deepin-metacity-common (= ${source:Version}),
-         zenity,
-         ${misc:Depends},
-         ${shlibs:Depends}
+ deepin-metacity-common (= ${source:Version}),
+ zenity,
+ ${misc:Depends},
+ ${shlibs:Depends}
 Provides: x-window-manager
 Suggests: xdg-user-dirs
 Description: lightweight GTK+ window manager
@@ -57,8 +58,8 @@ Package: libdeepin-metacity-private3
 Section: libs
 Architecture: any
 Depends: deepin-metacity-common (= ${source:Version}),
-         ${misc:Depends},
-         ${shlibs:Depends}
+ ${misc:Depends},
+ ${shlibs:Depends}
 Description: library for the Metacity window manager
  Metacity is a small window manager, using GTK+ to do everything.
  .
@@ -85,8 +86,8 @@ Package: libdeepin-metacity-dev
 Section: libdevel
 Architecture: any
 Depends: libgtk-3-dev,
-         libdeepin-metacity-private3 (= ${binary:Version}),
-         ${misc:Depends}
+ libdeepin-metacity-private3 (= ${binary:Version}),
+ ${misc:Depends}
 Description: development files for the Metacity window manager
  Metacity is a small window manager, using GTK+ to do everything.
  .
@@ -101,7 +102,7 @@ Section: debug
 Priority: extra
 Architecture: any
 Depends: deepin-metacity (= ${binary:Version}),
-         ${misc:Depends}
+ ${misc:Depends}
 Description: debugging symbols for the Metacity window manager
  Metacity is a small window manager, using GTK+ to do everything.
  .
