Change linuxdeepin to deepin
Change-Id: I469fca12ab92b0dc52ea5bd0b3d6a45ab28e9837

--- a/deepin-mutter/debian/control
+++ b/deepin-mutter/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-mutter
 Section: x11
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: cdbs (>= 0.4.90),
                debhelper (>= 9),
                gnome-pkg-tools (>= 0.10),
