--- a/deepin-menu/debian/control
+++ b/deepin-menu/debian/control
@@ -1,6 +1,6 @@
 Source: deepin-menu
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9),
  python,
  python-setuptools,
