--- a/go-gir-generator/debian/control
+++ b/go-gir-generator/debian/control
@@ -2,7 +2,7 @@ Source: go-gir-generator
 Section: devel
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
-Build-Depends: debhelper (>= 9), dh-golang, golang-go, libgirepository1.0-dev,
+Build-Depends: debhelper (>= 9), dh-golang, golang-go, libgirepository1.0-dev, libgtk-3-dev,
 Standards-Version: 3.9.6
 Homepage: http://www.linuxdeepin.com
 
