--- a/deepin-image-viewer/debian/control
+++ b/deepin-image-viewer/debian/control
@@ -8,6 +8,6 @@ Homepage: http://www.deepin.org
 
 Package: deepin-image-viewer
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends},libsqlite3-dev , libqt5sql5-sqlite,
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
