--- a/git-build.conf
+++ b/git-build.conf
@@ -206,6 +206,10 @@ git=https://cr.deepin.io/lastore/lastore-daemon-migration
 git=/home/gerrit/repos/private/deepin-cloud-print-client.git
 package_host=deepin-cloud-print
 
+[deepin-scanner]
+git=https://cr.deepin.io/deepin-scanner
+package_host=deepin-cloud-scan
+
 [dde-file-manager]
 git=https://cr.deepin.io/dde/dde-file-manager
 package_host=dde-file-manager
