--- a/git-build.conf
+++ b/git-build.conf
@@ -207,7 +207,7 @@ git=/home/gerrit/repos/private/deepin-cloud-print-client.git
 package_host=deepin-cloud-print
 
 [deepin-scanner]
-git=https://cr.deepin.io/deepin-scanner
+git=/home/gerrit/repos/private/deepin-scanner.git
 package_host=deepin-cloud-scan
 
 [dde-file-manager]
