add deepin-scanner with private
Change-Id: I2108d887109d99165054bb4f030297c46e3e4064

--- a/git-build.conf
+++ b/git-build.conf
@@ -209,6 +209,7 @@ package_host=deepin-cloud-print
 [deepin-scanner]
 git=/home/gerrit/repos/private/deepin-scanner.git
 package_host=deepin-cloud-scan
+private=True
 
 [dde-file-manager]
 git=https://cr.deepin.io/dde/dde-file-manager
