fix deepin-scanner url
Change-Id: Iec7c3e8adf3120beffedfa719fb896a57d85f514

--- a/git-build.conf
+++ b/git-build.conf
@@ -207,7 +207,7 @@ git=/home/gerrit/repos/private/deepin-cloud-print-client.git
 package_host=deepin-cloud-print
 
 [deepin-scanner]
-git=/home/gerrit/repos/private/deepin-scanner.git
+git=ssh://leaeasy@cr.deepin.io:29418/deepin-scanner
 package_host=deepin-cloud-scan
 private=True
 
