--- a/dde-session-ui/debian/control
+++ b/dde-session-ui/debian/control
@@ -7,13 +7,13 @@ Build-Depends: debhelper (>= 8.0.0), pkg-config, dpkg-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev, libgsettings-qt-dev,
  libqt5svg5-dev,liblightdm-qt5-3-dev, libglib2.0-dev,
  libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev,
- libgtk2.0-dev, qttools5-dev-tools,
+ libgtk2.0-dev, qttools5-dev-tools, libpam0g-dev,
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
 
 Package: dde-session-ui
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, deepin-desktop-schemas (>= 2.91.2), dde-daemon, x11-xserver-utils
+Depends: ${shlibs:Depends}, ${misc:Depends}, deepin-desktop-schemas (>= 2.91.2), dde-daemon, x11-xserver-utils, libpam0g
 Provides: lightdm-greeter
 Conflicts: dde-workspace, startdde (<< 2.91.1)
 Breaks: dde-workspace, startdde(<< 2.91.1)
