--- a/deepin-installer/debian/control
+++ b/deepin-installer/debian/control
@@ -26,6 +26,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, libdeepin-webkit-3.0-0,
  ${misc:Depends},
  btrfs-tools,
+ dconf-cli,
  dosfstools,
  e2fsprogs,
  jfsutils,
