--- a/git-build.conf
+++ b/git-build.conf
@@ -197,7 +197,7 @@ git=https://cr.deepin.io/go-gir-generator
 git=https://cr.deepin.io/deepin-desktop-base
 
 [dde-help]
-git=https://cr.deepin.io/dde-help
+git=https://cr.deepin.io/dde/dde-help
 
 [lastore-daemon-migration]
 git=https://cr.deepin.io/lastore/lastore-daemon-migration
