--- a/go-gir-generator/debian/control
+++ b/go-gir-generator/debian/control
@@ -2,7 +2,7 @@ Source: go-gir-generator
 Section: devel
 Priority: optional
 Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
-Build-Depends: debhelper (>= 9), dh-golang, golang-go, libgirepository1.0-dev, libgtk-3-dev,
+Build-Depends: debhelper (>= 9), dh-golang, golang-go, libgirepository1.0-dev, libgtk-3-dev,libgudev-1.0-dev,
 Standards-Version: 3.9.6
 Homepage: http://www.linuxdeepin.com
 
@@ -38,6 +38,17 @@ Description: Go bindings for Deepin Desktop Environment development
  Go bindings for Deepin Desktop Environment development
  .
  glib-2.0 go bindings.
+
+Package: golang-gir-gudev-1.0-dev
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends}, libgudev-1.0-dev,
+Conflicts: golang-gir-glib-2.0
+Provides: golang-gir-glib-2.0
+Breaks: golang-gir-glib-2.0
+Description: Go bindings for Deepin Desktop Environment development
+ Go bindings for Deepin Desktop Environment development
+ .
+ gudev-1.0  go bindings.
 
 Package: golang-gir-generator
 Architecture: any
