--- a/deepin-appstore/debian/control
+++ b/deepin-appstore/debian/control
@@ -17,10 +17,7 @@ Vcs-Browser: https://gitcafe.com/Deepin/deepin-appstore
 Package: deepin-appstore
 Architecture: any
 Depends:${shlibs:Depends}, ${misc:Depends},
- libglib2.0-0,
- libqt5webkit5, libqt5x11extras5, libqt5dbus5, 
- libxext6,
- lastore-daemon (>=0.9.0), libqt5xcbqpa5, deepin-appstore-data
+ lastore-daemon (>=0.9.0), deepin-appstore-data
 Replaces: dstore-client
 Description: Deepin App Store
  Deepin App Store Client.
