--- a/deepin-installer-reborn/debian/rules
+++ b/deepin-installer-reborn/debian/rules
@@ -11,5 +11,4 @@ override_dh_auto_configure:
 	dh_auto_configure -- -DCMAKE_BUILD_TYPE=Release
 
 override_dh_auto_build:
-	dh_auto_build -- deepin_installer
-
+	dh_auto_build -- deepin-installer-reborn
