--- a/git-build.conf
+++ b/git-build.conf
@@ -35,6 +35,10 @@ git=https://cr.deepin.io/dae
 package_host = dde
 git=https://cr.deepin.io/deepin-installer
 
+[deepin-installer-reborn]
+package_host = dde
+git=https://cr.deepin.io/deepin-installer-reborn
+
 [deepin-feedback]
 package_host = deepin-feedback
 git=https://cr.deepin.io/deepin-feedback
