--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -8,7 +8,11 @@ Build-Depends: debhelper (>=9),
     qtbase5-dev,
     pkg-config,
     libqt5svg5-dev,
-    libqt5x11extras5-dev
+    libqt5x11extras5-dev,
+    libx11-dev,
+    libxext-dev,
+    libxss-dev,
+    libxtst-dev,
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
