--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>=9),
     libxext-dev,
     libxss-dev,
     libxtst-dev,
+    cmake,
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
