dde-daemon: remove bluez5 from depends.
Change-Id: I78e85ccffacd180211f30bb1e1e7eb7b93732eb2

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -37,7 +37,7 @@ Depends: ${shlibs:Depends},
  ${misc:Depends},
  acpid,
  upower,
- bluez5 | bluez (>=5.4),
+ bluez (>=5.4),
  network-manager,
  bamfdaemon,
  xcur2png,
