deepin-installer-reborn: Added haparm
Change-Id: I1151b67a9b72c05228ee97118f77c1dfca168900

--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -25,6 +25,7 @@ Homepage: http://www.deepin.org
 Package: deepin-installer-reborn
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+    hdparm,
     util-linux,
 Description: Reborn version of deepin installer
  New version of deepin-installer, rewritten with Qt5.
