--- a/git-build.conf
+++ b/git-build.conf
@@ -231,3 +231,6 @@ git=https://cr.deepin.io/deepin-license
 
 [dde-session-ui]
 git=https://cr.deepin.io/dde/dde-session-ui
+
+[deepin-shortcut-viewer]
+git=https://cr.deepin.io/deepin-shortcut-viewer
