--- a/git-build.conf
+++ b/git-build.conf
@@ -234,3 +234,6 @@ git=https://cr.deepin.io/dde/dde-session-ui
 
 [deepin-shortcut-viewer]
 git=https://cr.deepin.io/deepin-shortcut-viewer
+
+[dde-polkit-agent]
+git=https://cr.deepin.io/dde/dde-polkit-agent
