add dde-file-manager depend for dde-daemon>=3.0.16+r1
Change-Id: I5cfe50c33e06d9e650c29c422841e6c27b3c75ab

--- a/dde-file-manager/debian/control
+++ b/dde-file-manager/debian/control
@@ -10,6 +10,6 @@ Homepage: http://www.deepin.org
 
 Package: dde-file-manager
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends},dde-daemon (>=3.0.16+r1)
 Description: File manager front end of Deepin OS
  File manager front end of Deepin OS
