add libgnome2-bin for crossover again
Change-Id: I504ad8d87d9fb108c8f12d734a3a7e48b7e21b7e

--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -24,6 +24,7 @@ Depends: ${shlibs:Depends},
  deepin-desktop-schemas (>> 2.91.2),
  dde-desktop, dde-dock, dde-launcher,
  dde-session-ui,
+ libgnome2-bin,
 Conflicts: deepin-session
 Breaks: startdde(<= 2.91.1)
 Description: starter of deepin desktop environment
