--- a/deepin-terminal/debian/rules
+++ b/deepin-terminal/debian/rules
@@ -1,19 +1,14 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
-
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
 %:
-	dh $@  --with python2
+	dh $@ 
+
+override_dh_auto_configure:
+	mv project_path.c project_path.c.orig
+	sed 's|__FILE__|"/usr/share/deepin-terminal/dummy\"|g' project_path.c.orig | tee project_path.c
+
 override_dh_auto_install:
 	dh_auto_install -- PREFIX=/usr
 
-override_dh_fixperms:
-	dh_fixperms
-	chmod 755 debian/deepin-terminal/usr/bin/deepin-terminal
+override_dh_clean:
+	if [ -f project_path.c.orig ];then mv project_path.c.orig project_path.c ;fi
+	dh_clean
