Modify deepin-terminal github.
Change-Id: Ie145f4a30a288713e8d1a4d785491f6f6b9ed319

--- a/git-build.conf
+++ b/git-build.conf
@@ -85,7 +85,7 @@ package_host=dde
 git=https://cr.deepin.io/deepin-os-upgrader
 
 [deepin-terminal]
-git=https://cr.deepin.io/deepin-terminal
+git=https://github.com/manateelazycat/deepin-terminal
 package_host=deepin-terminal
 
 [deepin-webkit]
