--- a/archive.conf
+++ b/archive.conf
@@ -156,3 +156,6 @@ git=https://cr.deepin.io/deepin-wm-switcher
 
 [dde-account-faces]
 git=https://cr.deepin.io/dde-account-faces
+
+[qt5dxcb-plugin]
+git=https://cr.deepin.io/qt5dxcb-plugin
