--- a/git-build.conf
+++ b/git-build.conf
@@ -240,3 +240,6 @@ git=https://cr.deepin.io/dde/dde-polkit-agent
 
 [deepin-default-settings]
 git=https://cr.deepin.io/default-settings
+
+[qt5dxcb-plugin]
+git=https://cr.deepin.io/qt5dxcb-plugin
