Add Depends "libqt5dxcb-plugin"
Change-Id: I118ac98ccfa2dea816ee445269f79702c073d285

--- a/deepin-tool-kit/debian/control
+++ b/deepin-tool-kit/debian/control
@@ -10,7 +10,7 @@ Standards-Version: 3.9.6
 
 Package: libdtkbase
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, libqt5dxcb-plugin
 Multi-Arch: same
 Description: Deepin Tool Kit Base library
  DtkBase is base library of Deepin Qt/C++ applications.
