Modify dde-file-manager control
Change-Id: I3aec5ea61658b4bada0855470c35deeb94bdf48f

--- a/dde-file-manager/debian/control
+++ b/dde-file-manager/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
 Build-Depends: debhelper (>=9), pkg-config, qt5-qmake, qt5-default, qtbase5-dev, qtbase5-private-dev,
  libxcb-ewmh-dev, libgtk2.0-dev, libqt5x11extras5-dev, libgsettings-qt-dev, libqt5svg5-dev, 
- qttools5-dev-tools, libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev, libmagic-dev, libudev-dev, libsecret-1-dev, libxcb-util0-dev, libstartup-notification0-dev, libpoppler-qt5-dev, libavformat-dev, libswscale-dev
+ qttools5-dev-tools, libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev, libmagic-dev, libudev-dev, libsecret-1-dev, libxcb-util0-dev, libstartup-notification0-dev, libpoppler-qt5-dev, libavformat-dev, libswscale-dev, libpolkit-agent-1-dev
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
