add lrzsz depend
Change-Id: I0a3e11fb488902b4fd2f4b58705bcf143cf39a1e

--- a/deepin-terminal/debian/control
+++ b/deepin-terminal/debian/control
@@ -9,6 +9,6 @@ Homepage: http://www.deepin.org
 Package: deepin-terminal
 Architecture: any
 Provides: x-terminal-emulator
-Depends: ${shlibs:Depends}, ${misc:Depends}, zssh
+Depends: ${shlibs:Depends}, ${misc:Depends}, zssh, lrzsz
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
