Rm depends: libqt5gui5 (=5.5.1+dfsg-16+b1)
Change-Id: I56d0367e54d905716bc1131b4b50aecd16d2e19f

--- a/qt5deepintheme-plugin/debian/control
+++ b/qt5deepintheme-plugin/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.9.6
 
 Package: libqt5deepintheme-plugin
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libqt5gui5 (=5.5.1+dfsg-16+b1)
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Multi-Arch: same
 Description: Qt5 Platform Theme Plugin.
  .
